<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="34dp"
            android:text="@string/login"
            android:textColor="?attr/colorOnBackground"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/md_theme_dark_surface"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeWidth="0dp"
            app:placeholderTextColor="@color/md_theme_dark_onSurface"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/email_input_placeholder"
                android:textColor="@color/md_theme_dark_onBackground"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/md_theme_dark_surface"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeWidth="0dp"
            app:placeholderTextColor="@color/md_theme_dark_onSurface"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/password_input_placeholder"
                android:textColor="@color/md_theme_dark_onBackground"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:enabled="false"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_account"
                android:textColor="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:textColor="?attr/colorPrimary" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="32dp"
            android:text="@string/forgot_password"
            android:textColor="?attr/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="2dp"
            android:layout_marginTop="20dp"
            android:background="@color/md_theme_dark_onSurface" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/vk_button"
                android:layout_width="156dp"
                android:layout_height="48dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/round_shape"
                android:backgroundTint="@color/vk_blue"
                android:scaleType="fitCenter"
                android:src="@drawable/vk_logo" />

            <ImageButton
                android:id="@+id/ok_button"
                android:layout_width="156dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/round_shape"
                android:backgroundTint="@color/ok_orange"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_ok" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>