<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:visibility="visible"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundColor="@color/md_theme_dark_surface"
                app:boxCornerRadiusBottomEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusTopStart="30dp"
                app:boxStrokeWidth="0dp"
                app:hintEnabled="false"
                app:placeholderTextColor="@color/md_theme_dark_onSurface"
                app:startIconDrawable="@drawable/ic_search"
                app:startIconTint="@color/md_theme_dark_onBackground"
                android:layout_gravity="center_vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEdit"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/search_courses"
                    android:inputType="textNoSuggestions|textVisiblePassword"
                    android:maxLines="1"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/md_theme_dark_onBackground"
                    android:textSize="14sp"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btnFav"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/ic_background"
                android:contentDescription="@string/filter"
                android:scaleType="centerInside"
                android:src="@drawable/ic_filter" />

        </LinearLayout>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/favorite"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="bottom"
            android:visibility="visible"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="4dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/semibold_roboto"
                android:text="@string/by_date"
                android:textColor="@color/md_theme_dark_primary"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:src="@drawable/ic_sort"
                android:clickable="true"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/feed"/>
    </LinearLayout>
</FrameLayout>